# advent_of_code_2022

./: .gitignore  Cargo.toml  README.md  dec_06.rs  dec_07.rs  dec_08.rs  dec_09.rs
dec_01/: Cargo.toml
dec_01/src/: main.rs
dec_02/: Cargo.toml
dec_02/src/: main.rs
dec_03/: Cargo.toml
dec_03/src/: main.rs
dec_04/: Cargo.toml
dec_04/src/: main.rs
dec_05/: main.rs
inputs/: dec_07_bug.txt  dec_07_input.txt  dec_07_test_small.txt
