[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
substring = "1.4.5"

[[bin]]
name = "dec_01"
path = "dec_01/src/main.rs"
[[bin]]
name = "dec_02"
path = "dec_02/src/main.rs"
[[bin]]
name = "dec_03"
path = "dec_03/src/main.rs"
[[bin]]
name = "dec_04"
path = "dec_04/src/main.rs"
[[bin]]
name = "dec_05"
path = "dec_05/main.rs"
[[bin]]
name = "dec_06"
path = "dec_06.rs"
[[bin]]
name = "dec_07"
path = "dec_07.rs"
